# dendrite

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  Cargo.toml  PRACTICAL_IMPACT.md  README.md  ROADMAP.md  clippy.toml  deny.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/dendrite/: Cargo.toml
crates/dendrite-core/: Cargo.toml
crates/dendrite-core/benches/: fork.rs  grammar.rs  tree_vs_linear.rs
crates/dendrite-core/examples/: beam_search.rs  golden_validation.rs  gpu_attention.rs  gpu_inference.rs  json_generation.rs  mcts_search.rs  text_inference.rs
crates/dendrite-core/src/: error.rs  lib.rs
crates/dendrite-core/src/attention/: backend.rs  flashinfer.rs  mod.rs  paged.rs
crates/dendrite-core/src/cache/: block.rs  block_table.rs  mod.rs  paged.rs  pool.rs  radix.rs
crates/dendrite-core/src/grammar/: constraint.rs  mask.rs  mod.rs
crates/dendrite-core/src/model/: config.rs  golden.rs  kv_cache.rs  layer.rs  loader.rs  mlp.rs  mod.rs  rmsnorm.rs  rope.rs  tokenizer.rs  transformer.rs
crates/dendrite-core/src/quantization/: fp8.rs  mod.rs
crates/dendrite-core/src/scheduler/: batch.rs  mod.rs  policy.rs  request.rs
crates/dendrite-core/src/search/: beam.rs  expander.rs  integrated.rs  mcts.rs  mod.rs  scorer.rs
crates/dendrite-core/src/tree/: mod.rs  node.rs  state.rs
crates/dendrite-ffi/: Cargo.toml  build.rs
crates/dendrite-ffi/examples/: gpu_check.rs
crates/dendrite-ffi/src/: cuda.rs  error.rs  lib.rs
crates/dendrite-ffi/src/flashinfer/: batch_decode.rs  batch_prefill.rs  cascade.rs  mod.rs
crates/dendrite/examples/: json_output.rs  tree_of_thought.rs
crates/dendrite/src/: engine.rs  lib.rs
docs/: chatgpt-dr.md  claude-dr.md  gemini-dr.md  grok-dr.md  perplexity-dr.md  prd.md
scripts/: generate_golden.py
