[package]
name = "dendrite-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for Dendrite: tree-structured KV cache, scheduler, and inference loop"
keywords = ["llm", "kv-cache", "inference", "tree-search"]
categories = ["science", "algorithms"]

[features]
default = []
cuda = ["dep:cudarc", "candle-core/cuda", "candle-nn/cuda"]
test-reference = []
test-miri = []

[dependencies]
# Async & concurrency
tokio = { workspace = true }
rayon = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# Error handling & logging
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
safetensors = { workspace = true }
bytemuck = { workspace = true }
half = { workspace = true }

# ML Framework
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

# CUDA (optional)
cudarc = { workspace = true, optional = true }

# Tokenizer
tokenizers = { workspace = true }

# Constrained decoding
llguidance = { workspace = true }

# FFI crate
dendrite-ffi = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
rand = "0.8"

# Benchmarks
[[bench]]
name = "fork"
harness = false

[[bench]]
name = "tree_vs_linear"
harness = false

[[bench]]
name = "grammar"
harness = false
